[package]
name = "combined_order_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-tungstenite = "0.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
grpcio = "0.9.0"
prost = "0.9.0"
prost-derive = "0.9.0"
tokio-test = "0.4.0"
futures = "0.3"
tokio-tungstenite = "0.15.0"

[build-dependencies]
prost-build = { version = "0.9.0" }
